<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_lio_localization</name>
  <version>2.0.0</version>

  <description>
    FAST-LIO Localization: LiDAR-Inertial localization based on prior map.
    ROS2 version migrated from ROS1.
  </description>

  <maintainer email="dev@livoxtech.com">claydergc</maintainer>
  <license>BSD</license>
  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>livox_ros_driver2</depend>
  <depend>visualization_msgs</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
